# dbx-tools

./: .eslintrc.json  .example.projenrc.ts  .gitattributes  .gitignore  .pnpmfile.cjs  .prettierignore  .prettierrc.json  .projenrc.ts  AGENTS.md  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  projenrc.ts  pyproject.toml  tsconfig.json
.cursor/rules/: dbx-tools-agents.mdc
.githooks/: pre-commit
.github/workflows/: build.yml  docs.yml  projen-release.yml  release.yml
.projen/: deps.json  files.json  tasks.json
branding/: brand.yaml  generate-package-assets.mjs
branding/logo-brick/: README.md  index.html
branding/logo-monogram/: README.md  index.html
branding/logo-terminal/: README.md  index.html
dbx-tools/: index.ts  package.json
dbx-tools/.projen/: deps.json  tasks.json
dbx-tools/src/: log.ts
demo/: .env.example  .eslintrc.json  .npmrc  .projenrc.ts  README.md  package.json  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  tsconfig.projen.json
demo/scripts/: dev-link.mjs
dev-projen/: .pnpmfile.cjs  .projenrc.ts
dev-projen/.projen/: deps.json  files.json  tasks.json
dev-projen/src/: barrels.ts  module-exports.ts  openapi.ts  project-predicate.ts  project.ts  vscode.ts
docs/: README.md  vitepress.config.mts
docs/scripts/: generate-api-docs.mjs  (+1 more)
plans/: appkit-companion-continuation.md  dbx-tools-js-migration.md
projen/: .gitattributes  .npmignore  .pnpmfile.cjs  .projenrc.ts  README.md  index.ts  package.json  tsconfig.json  tsconfig.projen.json
projenrc/: discovered.json
(+518 files in other folders)
